--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,13 +7,14 @@ server.forward-headers-strategy=framework
 spring.datasource.url=jdbc:postgresql://localhost:5432/paradis_db
 spring.datasource.username=postgres
 spring.datasource.password=123123
+spring.main.allow-circular-references=true
+spring.profiles.active=@spring.profiles.active@
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+# JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.jpa.show-sql=false
-spring.profiles.active=@spring.profiles.active@
-spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
-spring.main.allow-circular-references=true
 spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.open-in-view=false
