--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -34,3 +34,5 @@ springdoc.swagger-ui.tagsSorter=alpha
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# EXTERNAL API
+stock.service.url=http://localhost:2222
