--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -107,6 +107,18 @@
       <artifactId>jackson-databind</artifactId>
       <version>LATEST</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+      <version>1.12.261</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>LATEST</version>
+    </dependency>
   </dependencies>
   <description>Demo project for Spring Boot</description>
   <groupId>com.ff</groupId>
