--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -108,6 +108,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>LATEST</version>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
